@@ -8,6 +8,8 @@
 - Fixed issue #10595: ezcConsole*Options perform improper string checks.
 - Fixed issue #10596: ezcConsoleTable* classes do not perform proper property
   checks.
+- Fixed issue #10604: ezcConsoleInput exception not thrown on invalid option
+  string.
 
 1.2 - Monday 18 December 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
